# ecs

./: .gitignore  CMakeLists.txt  ComponentList.h  ComponentStore.h  Components.h  ECS.h  EntityStore.h  README.md  Systems.h  ecs_test.cpp  main.cpp  test_main.cpp
ecs/: Common.h  ComponentList.h  ComponentStore.h  ECS.h  Entity.h  EntityStore.h  Systems.h  Types.h  component_list.h  tt.cpp
elf_vs_orcs/: Makefile  README.md
elf_vs_orcs/include/: ComponentKeys.h  MoveComponent.h  PosComponent.h  component.h  entity.h
elf_vs_orcs/src/: PosComponent.cpp  entity.cpp  main.cpp
hello_world/: test.cpp  test2.cpp  test_ecs
hello_world/include/: Common.h  ComponentList.h  Components.h  DisplayMessageSystem.h  Engine.h  GetMessageSystem.h  ISystem.h
hello_world/src/: main.cpp
include/: ecs
include/coreECS/: Common.h  ComponentList.h  ComponentStore.h  Systems.h
src/: main.cpp
test/: dumb_shit.cpp
tests/: .comp_list_test.cpp.swp  .test2.cpp.swp  ComponentStore.h  comp_list_test-2.cpp  comp_list_test.cpp  component_list.h  component_vector.h  dumb_shit.cpp  func_list_test.cpp  test  test2.cpp  utils.h
